--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         dotnet-version: '8.0.x'
         
-    - name: Cache NuGet packages
+    - name: Cache packages
       uses: actions/cache@v3
       with:
         path: |
