--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -48,6 +48,7 @@ jobs:
       continue-on-error: true
 
   dockerize-and-push:
+    needs: build-and-test
     runs-on: ubuntu-latest
     timeout-minutes: 30    
     permissions:
