--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -26,7 +26,7 @@ jobs:
         service_account: ${{ secrets.GCP_SERVICE_ACCOUNT_EMAIL }}
         
     # Cluster setup section
-    - name: Configure GKE culster access
+    - name: Auth kubectl
       uses: google-github-actions/get-gke-credentials@v1
       with:
         cluster_name: ${{ secrets.GKE_CLUSTER }}
